; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_kperf_timer.c_kperf_timer_go.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_kperf_timer.c_kperf_timer_go.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@pet_timer_id = common dso_local global i64 0, align 8
@kperf_timerc = common dso_local global i64 0, align 8
@kperf_timerv = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kperf_timer_go() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i64, i64* @pet_timer_id, align 8
  %4 = load i64, i64* @kperf_timerc, align 8
  %5 = icmp ult i64 %3, %4
  br i1 %5, label %6, label %13

6:                                                ; preds = %0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** @kperf_timerv, align 8
  %8 = load i64, i64* @pet_timer_id, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @kperf_pet_config(i32 %11)
  br label %13

13:                                               ; preds = %6, %0
  %14 = call i32 (...) @mach_absolute_time()
  store i32 %14, i32* %1, align 4
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %36, %13
  %16 = load i32, i32* %2, align 4
  %17 = zext i32 %16 to i64
  %18 = load i64, i64* @kperf_timerc, align 8
  %19 = icmp ult i64 %17, %18
  br i1 %19, label %20, label %39

20:                                               ; preds = %15
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** @kperf_timerv, align 8
  %22 = load i32, i32* %2, align 4
  %23 = zext i32 %22 to i64
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp eq i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %20
  br label %36

29:                                               ; preds = %20
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** @kperf_timerv, align 8
  %31 = load i32, i32* %2, align 4
  %32 = zext i32 %31 to i64
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i64 %32
  %34 = load i32, i32* %1, align 4
  %35 = call i32 @kperf_timer_schedule(%struct.TYPE_3__* %33, i32 %34)
  br label %36

36:                                               ; preds = %29, %28
  %37 = load i32, i32* %2, align 4
  %38 = add i32 %37, 1
  store i32 %38, i32* %2, align 4
  br label %15

39:                                               ; preds = %15
  ret void
}

declare dso_local i32 @kperf_pet_config(i32) #1

declare dso_local i32 @mach_absolute_time(...) #1

declare dso_local i32 @kperf_timer_schedule(%struct.TYPE_3__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
